vertical-align for smaller devices fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1809,10 +1809,10 @@ a.brand:hover,a.brand:focus {
 .btn-wave {
     position: relative;
     margin-left: 75px;
-    bottom: 12px;
+    bottom: 0.8rem;
 }
 span.audio {
-    display: block;
+    display: inline-flex;
     bottom: 0px;
     width: 5px;
     height: 4px;
